# pico-firmware

./: .gitignore  .gitmodules  .release-please-manifest.json  CLAUDE.md  CMakeLists.txt  OPERATIONS.md  README.md  SUBTREE_SETUP.md  TEMPCTRL_SIMPLIFICATION.md  TODO.md  build.sh  build_test.sh  claude.md  clean.sh  devices_info.json  flash_picos.py  monitor_picos.py  pico_device_scanner.py  release-please-config.json  test_device_query.py  test_dip_CMakeLists.txt  test_motor_pico.py  test_peltier.py  test_rfswitch_pico.py  test_status_query.py
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude-emulator-parity.yml  release-please.yml
apps/motor/: main.c  motor.c  motor.h
apps/switches/pico_c/: pyproject.toml
apps/switches/pico_c/src/switch_network/: __init__.py
apps/switches/scripts/: main.py
apps/switches/src/switch_network/: testing.py
golden/: CMakeLists.txt  build.sh  main.c  pt.json
include/: app_common.h
lib/base64/: base64.c  base64.h
lib/eigsep_command/: eigsep_command.c  eigsep_command.h
lib/onewire/: onewire_library.c
pico_c/: CMakeLists.txt  README.md  build.sh
pico_c/src/: main.c
picohost/: CHANGELOG.md  README.md  pico-manager.service  picomanager.service  pyproject.toml  test_dummy_devices.py
picohost/examples/: basic_usage.py
picohost/notebooks/: imu_two_axis_simulation.ipynb
picohost/scripts/: basic_reboot_pi.py  calibrate_imu.py  calibrate_pot.py  control_temp.py  ds18b20_detect.py  example_usage.py  flash-picos  flash_picos.py  imu_reboot_pi.py  monitor_picos.py  motor_control.py  motor_manual.py  plot_test_lidar.py  plot_test_pot.py  read_imu.py  reboot_pi.py  record_temp.py  simple_stream_metadata.py  test_imu.py  test_motor_pico.py  test_motor_pico_v2.py  test_peltier.py  test_peltier_v2.py  test_pots.py  test_rfswitch_pico.py  test_rfswitch_pico_v2.py  testing_pot_vs.npz
picohost/src/picohost/: __init__.py  _serial_reader.py  _serial_writer.py  base.py  buses.py  calibrate_current.py  calibrate_imu.py  calibrate_pot.py  flash_picos.py  flash_test.py  gpio.py  imu_geometry.py  keys.py  manager.py  manager_service.py  motor.py  motor_sweep.py  proxy.py  resolve.py  testing.py
picohost/src/picohost/emulators/: __init__.py  base.py  imu.py  lidar.py  motor.py  potmon.py  rfswitch.py  tempctrl.py  tempmon.py
picohost/tests/: conftest.py  test_base.py  test_calibrate_current.py  test_calibrate_imu.py  test_calibrate_pot.py  test_dummy_devices.py  test_emulator_integration.py  test_emulators.py  test_flash_picos.py  test_flash_test.py  test_gpio.py  test_imu_calibration.py  test_imu_geometry.py  test_imu_handler.py  test_main_loop_scheduling.py  test_manager.py  test_manager_integration.py  test_manager_service.py  test_motor_commands.py  test_motor_geometry.py  test_motor_position.py  test_motor_sweep.py  test_potentiometer.py  test_protocol_conformance.py  test_proxy.py  test_redis_float_coercion.py  test_resolve.py  test_streaming.py
src/: adc_app.c  adc_app.h  blink_app.c  blink_app.h  blink_app1.c  blink_app1.h  blink_app2.c  blink_app2.h  currentmon.c  currentmon.h  ds18b20.h  imu.c  imu.cpp  imu.h  lidar.c  lidar.h  main.c  motor.c  motor.h  motor_app.c  motor_app.h  motor_ramp.h  pico_multi.h  potmon.c  potmon.h  potmon.h.bak  relay_app.c  relay_app.h  rfswitch.c  rfswitch.h  sensor_app.h  switch_app.c  switch_app.h  temp_shared.c  temp_shared.h  temp_simple.c  temp_simple.h  tempctrl.c  tempctrl.h  tempmon.c  (+7 more)
src/peltier_pico/: CMakeLists.txt  hbridge_peltier.c  hbridge_peltier.h  main.c  read_temp.c  read_temp.h  runtime_cmd.c  runtime_cmd.h
src/switch_network/: switch.py
src/unused_apps/: tempmon.c  tempmon.h
tests/: test_pico_utils.py  test_switch.py
