[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "picohost"
version = "3.6.0"
description = "Host control and management tools for Raspberry Pi Pico devices"
readme = "README.md"
license = {text = "MIT"}
authors = [{ name="Christian Hellum Bye", email="cbh@berkeley.edu" }]
requires-python = ">=3.10"
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Embedded Systems",
  "Topic :: System :: Hardware",
]
dependencies = [
  "numpy",
  "pyserial",
  "eigsep_redis>=2.3.0",
  # Pi-side GPIO control. Pure-python; the pin factory backend (lgpio
  # on the field image, via eigsep-field's [hardware.lgpio]) is
  # supplied by the deployment, not declared here — PyPI lgpio ships
  # no cp313 wheel, so declaring it would break eigsep-field's
  # wheelhouse build. For tests/dev on non-Pi systems, set GPIOZERO_PIN_FACTORY=mock.
  "gpiozero>=2",
]

[project.scripts]
flash-picos = "picohost.flash_picos:main"
flash-test = "picohost.flash_test:main"
pico-manager = "picohost.manager:main"
calibrate-pot = "picohost.calibrate_pot:main"
picohost-resolve = "picohost.resolve:main"

[project.optional-dependencies]
dev = [
  "ruff",
  "pytest",
  "pytest-cov",
  "pytest-timeout",
  "pyserial-mock>=1.0.0",
  "fakeredis",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"picohost" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
  "--cov=picohost",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "--junitxml=junit.xml",
  "-o junit_family=legacy",
  "--timeout=60",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-ignore = ["E203"]

[tool.ruff.lint.per-file-ignores]
"src/*/__init__.py" = ["F401"]
